# qsapecng

./: AUTHOR  CHANGELOG  CMakeLists.txt  README  THANKS  TODO  doxy.cfg
cmake/Modules/: FindQwt.cmake  FindQwt5.cmake  FindQwt6.cmake
debian/: NEWS  changelog  control  copyright  menu.ex  qsapecng-doc.doc-base  qsapecng-doc.install  qsapecng.1  qsapecng.docs  qsapecng.install  qsapecng.manpages  qsapecng.menu  rules  watch  watch.ex
debian/patches/: compile_flags.patch  doxy-timestamp.patch  libqwt6_fix.patch  series
doxy/: inst_qsapecng.dox  inst_sapecng.dox  mainpage.dox  qsapecnglic.dox  sapecnglic.dox
doxy/manual/: designer.dox  examples.dox  howto.dox  manual.dox  thebigpicture.dox  userdef.dox  workplane.dox
src/: CMakeLists.txt  stuff.dox
src/boost-sapecng/: edge_properties.hpp  mrt.hpp
src/exception/: sapecngexception.h
src/functor/: README.rpoly  rpoly-adapter.cpp  rpoly.cpp
src/gui/: delegate.cpp  delegate.h  extendedmdiarea.h  qlogger.h  qsapecng.cpp  qsapecng.qrc  qsapecngwindow.cpp  qsapecngwindow.h  settings.cpp  settings.h  sidebarmodel.cpp  sidebarmodel.h  sidebarview.cpp  sidebarview.h
src/gui/configdialog/: configdialog.cpp  configdialog.h  configpage.cpp  configpage.h
src/gui/editor/: component.cpp  component.h  graphicsnode.cpp  graphicsnode.h  inode.h  item.cpp  item.h  label.cpp  label.h  metacircuit_thread.hpp  propertytextitem.hpp  schematiceditor.cpp  schematiceditor.h  schematicscene.cpp  schematicscene.h  schematicsceneparser.cpp  schematicsceneparser.h  schematicview.h  undoredocommand.cpp  undoredocommand.h  wire.cpp  wire.h
src/gui/functor/: functor_traits.hpp
src/gui/images/: qsapecng-16x16.xpm  qsapecng-32x32.xpm  qsapecng.icns
src/gui/qtsolutions/qtpropertyeditor/: .gitignore
src/gui/userdefdialog/: userdefdialog.cpp  userdefdialog.h
src/gui/workplane/: workplane.cpp  workplane.h
src/logger/: logger.h
src/model/: circuit.cpp  circuit.h  graph.h  metacircuit.cpp  metacircuit.h
src/parser/: crc_circuit.cpp  crc_circuit.h  ir_circuit.cpp  ir_circuit.h  parser.h  parser_factory.h
